# diffmeter

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  action.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/diffmeter/: __init__.py  cli.py  config.py  git_utils.py  github_pr.py  languages.py  scorer.py
tests/: test_cli.py  test_config.py  test_github_pr.py  test_languages.py  test_scorer.py
