[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "diffmeter"
version = "0.1.0"
description = "Measure how much of a diff is real logic vs. comments, formatting, and noise."
readme = "README.md"
license = "MIT"
authors = [{ name = "Clayton Lin" }]
requires-python = ">=3.9"
keywords = ["git", "diff", "ast", "tree-sitter", "code-review", "pull-request"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
  "tree-sitter-language-pack>=1.10",
  "click>=8.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/claytonlin1110/diffmeter"
Issues = "https://github.com/claytonlin1110/diffmeter/issues"

[project.scripts]
diffmeter = "diffmeter.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/diffmeter"]
