[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "diffmeter"
version = "0.6.1"
description = "Measure how much of a diff is real logic vs. comments, formatting, and noise."
readme = "README.md"
license = "MIT"
authors = [{ name = "Clayton Lin" }]
requires-python = ">=3.10"
keywords = ["git", "diff", "ast", "tree-sitter", "code-review", "pull-request"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
  "tree-sitter-language-pack>=1.10",
  "click>=8.1",
  "pathspec>=0.11",
  "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/claytonlin1110/diffmeter"
Issues = "https://github.com/claytonlin1110/diffmeter/issues"
Changelog = "https://github.com/claytonlin1110/diffmeter/blob/main/CHANGELOG.md"

[project.scripts]
diffmeter = "diffmeter.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/diffmeter"]
